--- a/examples/flagset/.goreleaser.yml
+++ b/examples/flagset/.goreleaser.yml
@@ -1,11 +1,9 @@
-# This is an example .goreleaser.yml file with some sane defaults.
 # Make sure to check the documentation at http://goreleaser.com
+project_name: flagset
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
+#   - go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
